# ot-harjoitustyo

./: .gitignore  README.md  pyproject.toml
laskarit/viikko1/: komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: .maksukortti.py.swp
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
projekti/: .coveragerc  pyproject.toml  tasks.py
projekti/data/: saves.db
projekti/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  koodin_lahteet_ideat.md  lahdekoodi.md  testausdokumentti.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
projekti/src/: RoomPlanner.py  build.py  database_connection.py  initialize_database.py  main.py  room_planner.py  testausta.json  testi3.json
projekti/src/file_handler/: json_handler.py  save_load.py  sql_handler.py
projekti/src/handler/: event_handler.py
projekti/src/logic_handler/: canvas_handler.py  coord_handler.py  data_handler.py  shape_handler.py
projekti/src/rectangle/: rectangle.py
projekti/src/shapes/: shape.py  shape_class.py
projekti/src/tests/: UI_test.py  canvas_handler_event_test.py  canvas_handler_test.py  data_handler_test.py  handler_test.py  json_test.py  rectangle_test.py  save_load_test.py  shape_handler_test.py  shape_test.py  sql_test.py
projekti/src/ui/: canvas_view.py  change_view.py  main_view.py  pop_up_window.py  pop_up_windows.py  ui.py  ui_control.py  ui_view.py
projekti/src/ui/popups/: json_pop_ups.py  sql_pop_ups.py
viikko1/: gitlog.txt
