[tool.poetry]
name = "projekti"
version = "0.1.0"
description = ""
authors = ["Emmi <koponemi@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
coverage = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
